# rna-fleek

./: .gitignore  CLAUDE.md  README.md  download_census.py  download_go.py  download_markers.py  fleek copy.html  fleek.html  fleek_linux.spec  fleek_mac.spec  fleek_server.py  fleek_supervisor.py  fleek_win.spec  inspect_obs.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
data/gmt/: README.md
deployment/: README.md  fleek-supervisor.service  nginx.conf.example
resources/: eye 3.pxd
rna_fleek/: __init__.py  cell_markers.json  fleek.html  server.py  supervisor.py
scripts/: download_go.py  download_markers.py  download_panglao.py  inspect_h5ad.py
